syntax = "proto3";

package sealed_secret;

message UnSealSecretInput {
    bytes secret = 1;
}

message UnSealSecretOutput {
    bytes plaintext = 1;
}

service SealedSecretService {
    rpc UnsealSecret(UnSealSecretInput) returns (UnSealSecretOutput) {};
}
